Attempt at fixing right bleeds on other browsers

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-body { 
+body, html { 
   font-family:	Calibri,
 		"Gill Sans",
 		"Gill Sans MT",
